--- a/index.html
+++ b/index.html
@@ -1,24 +1,49 @@
-<!doctype html>
-<html lang="fr">
-<head>
-  <meta charset="utf-8">
-  <title>Titre de la page</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
-</head>
-<body>
-  ...
-  <!-- Le reste du contenu -->
+<!DOCTYPE html>
+<html lang="en">
+ <head>
+   <meta charset="UTF-8" />
+   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <link rel="stylesheet" href="style.css" />
+   <title>Document</title>
+ </head>
+ <body>
+   <nav class="navbar">
+     <!-- LOGO -->
+     <div>NANOSHOP</div>
 
+   
 
-  <div id="conteneur">
-  		<div class="element1">Element </div>
-  		<div class="element2">Element </div>
-  		<div class="element3">Element </div>
+  <div>
+  <img class="logo" src="img/panier.png">
   </div>
 
-<p id="my-anchor">My content </p>
+ 
 
-  ...
-</body>
+     <!-- NAVIGATION MENU -->
+     <ul class="nav-links">
+       <!-- USING CHECKBOX HACK -->
+      
+       
+       <!-- NAVIGATION MENUS -->
+       <div class="menu">
+         <li><a href="/">SHOP</a></li>
+         <li><a href="/">A PROPOS</a></li>
+         <li class="services">
+           <a href="/">Les Services</a>
+           <!-- DROPDOWN MENU -->
+           <ul class="dropdown">
+             <li><a href="/">Dropdown 1 </a></li>
+             <li><a href="/">Dropdown 2</a></li>
+             <li><a href="/">Dropdown 2</a></li>
+             <li><a href="/">Dropdown 3</a></li>
+             <li><a href="/">Dropdown 4</a></li>
+           </ul>
+         </li>
+         <li><a href="/">TARIFS</a></li>
+         <li><a href="/">CONTACT</a></li>
+       </div>
+     </ul>
+   </nav>
+ </body>
 </html>
